# Moonstone

./: .gitmodules  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml
src/: App.vue  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/moonstone-db/: Cargo.toml
src-tauri/moonstone-db/src/: lib.rs  main.rs  models.rs  sessions.rs
src-tauri/src/: exceptions.rs  lib.rs  main.rs
src-tauri/src/api/: account.rs  community.rs  message.rs  session.rs
src-tauri/src/utils/: checks.rs
src/components/: Greet.vue  JoinCommunityPanel.vue  Login.vue  Main.vue  NewCommunityPanel.vue  PreLoad.vue  Register.vue  Settings.vue
src/components/Login/: Description.vue  Login.vue
src/components/Main/: EditorPanel.vue  Messages.vue  Sessions.vue  TopBar.vue
src/router/: index.ts
src/scripts/: random.ts
src/stores/: debug.ts  login.ts  sessions.ts  theme.ts
src/views/: dashboard.vue  login.vue  register.vue
