[package]
name = "moonstone"
version = "0.1.0-alpha.1"
description = "MoonStone E2EE IM"
authors = ["苏向夜 <fu050409@163.com>"]
license = "Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moonstone_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.12", features = [] }
tauri-plugin-shell = "2.0.0-beta"
# tauri = { version = "1", features = [ , "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oblivion = { path = "oblivion" }
thiserror = "1"
tauri-plugin-notification = "2.0.0-beta.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
