[package]
name = "moonstone"
version = "0.2.0-alpha.9"
description = "基于 Oblivion 通讯协议的端到端加密链路即时通讯客户端"
authors = ["苏向夜 <fu050409@163.com>"]
license = "Apache-2.0"
repository = "https://github.com/noctisynth/Moonstone"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moonstone_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oblivion = { path = "../oblivion" }
thiserror = "1"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
anyhow = "1"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
