[package]
name = "moonstone_db"
version = "0.1.0"
authors = ["苏向夜 <fu050409@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde = "1.0.197"
surrealdb = { version = "1.3.1", features = ["kv-rocksdb", "kv-mem"]}
tokio = "1.37.0"
once_cell = "1.19"

[lib]
name = "moonstone_db"
